extended content, links to servers

--- a/tutorials/D1S1_variables_dtypes/D1S1_tutorial1.ipynb
+++ b/tutorials/D1S1_variables_dtypes/D1S1_tutorial1.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# @title Helper Functions\n",
     "\n",
-    "def checkExercise1(A, B, C, D):\n",
+    "def checkExercise1():\n",
     "    pass"
    ]
   },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "64bf8eaf-34cb-4663-b0a4-8584d51d5cca",
    "metadata": {},
    "outputs": [
@@ -144,17 +144,6 @@
      "output_type": "stream",
      "text": [
       "Hello Noah\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "minute must be in 0..59",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# when lunch\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdt\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m lunchTime \u001b[38;5;241m=\u001b[39m \u001b[43mdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m61\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m night_time \u001b[38;5;241m=\u001b[39m dt\u001b[38;5;241m.\u001b[39mtime(\u001b[38;5;241m22\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# while loop to check time\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: minute must be in 0..59"
      ]
     }
    ],
@@ -167,12 +156,12 @@
     "# when lunch\n",
     "import datetime as dt\n",
     "\n",
-    "lunchTime = dt.time(12, 61, 0)\n",
+    "lunchTime = dt.time(12, 0, 0)\n",
     "night_time = dt.time(22, 0, 0)\n",
     "\n",
     "# while loop to check time\n",
     "\n",
-    "if dt.datetime.now() == lunchtime:\n",
+    "if dt.datetime.now() == lunchTime:\n",
     "    print('Noah, go for lunch, otherwise your aptitude will drop!')\n",
     "\n",
     "if dt.datetime.now() == night_time:\n",
@@ -212,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "842eb9b5-d95a-4a2d-bf99-03187f1330cd",
    "metadata": {},
    "outputs": [],
@@ -233,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c79cc19b-d4a2-4940-bd20-77846d4edd58",
    "metadata": {},
    "outputs": [],
@@ -245,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "661c9c1e-453a-48bb-baf9-fe9b2b8becc3",
    "metadata": {},
    "outputs": [
@@ -255,13 +244,118 @@
        "str"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(str_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "71b51f64-36aa-4155-b418-ff23a7a18363",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('11', str)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'1' + '1', type('1' + '1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "922d0e88-35c2-499e-a2e3-a315718be874",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, int)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1, type(1 + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0f6c3bd6-383f-4b29-bc12-31246581bab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.0, float)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1., type(1 + 1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0e3334b0-e738-44af-9c33-cb3f91e19383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.0, float)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3/1, type(3/1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4bd14d9d-c717-4a5a-ab78-c4119c69c51a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, int)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 * 1, type(3 * 1)"
    ]
   },
   {
@@ -276,25 +370,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "452579c6-1435-4d57-9b65-a6254a44eaf1",
+   "metadata": {},
+   "source": [
+    "## Why is this important\n",
+    "* any variable in python is an object\n",
+    "* objects have properties (attributes) and methods associated to them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b491f17a-73b8-4b5a-8b4e-6b943a51bcf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = '1' + '1'\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "335f11a8-9990-4c4d-a65b-8c1104927fa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1 + 1\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c4f8b6ad-5221-4990-8d27-75ac2ceed24d",
    "metadata": {},
    "source": [
     "---\n",
-    "# Section X: More data types\n",
+    "# Section X: Should we introduce lists for example\n",
     "\n",
     "*Time estimate: ~20mins*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "fa52074d-f7d5-4901-b661-1d288197a784",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.time"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# list\n",
-    "# dictionary\n",
-    "# tuple"
+    "type(lunchTime)"
    ]
   },
   {
@@ -313,6 +471,16 @@
     "# Section X: Exercise\n",
     "\n",
     "*Time estimate: ~20mins*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "966c80cf-e9d0-4d40-a9b4-08e38ef44aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parsing string type of data?"
    ]
   },
   {
