second NB content

--- a/tutorials/D1S1_variables_dtypes/D1S1_tutorial1.ipynb
+++ b/tutorials/D1S1_variables_dtypes/D1S1_tutorial1.ipynb
@@ -19,6 +19,7 @@
     "---\n",
     "# Tutorial Objectives\n",
     "\n",
+    "* Introducing Jupyterlab Notebooks\n",
     "* No code algorithmic thinking\n",
     "* introducing variables and data types"
    ]
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "18bb052b-61b6-488c-ac9a-bd8150f654f1",
    "metadata": {},
    "outputs": [],
@@ -53,6 +54,24 @@
     "\n",
     "def checkExercise1():\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2016657-3c2d-4767-8234-4113a5cc1531",
+   "metadata": {},
+   "source": [
+    "# Section 0: Introducing interactive python\n",
+    "This document is in a special format called *Jupyter Notebook* that allows **Python Code**, **Text** and **Outputs** to be mixed in the same page.\n",
+    "The document is hosted in the **Google Colab Environment**, which provides a dedicated *virtual machine* to run the code in the notebook.\n",
+    "\n",
+    "Jupyter Notebooks are made of cells. At this very moment you are reading the contents of a text cell, but below you will find Python code cells intermingled with text cells. Each text cell can have one or several lines of text, and each code cell can have one or more lines of Python code. To edit text cells, double-click on them, and the unformatted content will be made available. Doing SHIFT+ENTER on text cells will revert them to the formatted status, closing the edit mode and moving the cursor over to the next cell (the one immediately below).\n",
+    "\n",
+    "Execute cells (with SHIFT+ENTER) or execute and create empty cell below (ALT+ENTER). Note that code cells have a \"play\" button on the left side, and you can also run them by clicking on that button.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Before we start, we need to connect the notebook to the virtual machine, which can be done by clicking the \"Connect\" button at the top right of the screen. After a few seconds, the button will change to a green checkmark next to memory (\"RAM\") and storage (\"Disk\") free size indicators - the Colab environment can be run for free, but it's resources are limited."
    ]
   },
   {
@@ -90,9 +109,10 @@
     "\n",
     "Five specific python lego pieces\n",
     "1. print function: output by default on screen\n",
-    "2. text or `string` is always inbetween \" \"\n",
+    "2. text or `string` is always inbetween \" \" or ' '\n",
     "3. `if` something, simplest flow control\n",
-    "4. how to access time, import any module in the import datetime"
+    "4. how to access time, import datetime\n",
+    "5. arithmetic operators"
    ]
   },
   {
@@ -115,12 +135,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fab69abe-8f44-483f-a33a-20d8a29b3ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left side greater than the right\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 2 > 1:\n",
+    "    print('left side greater than the right')\n",
+    "elif 2 < 1:\n",
+    "    print('right side greater than the left')\n",
+    "else:\n",
+    "    print('None of the above')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bae0fa7-ecfb-412f-adf7-0915999edfc3",
+   "metadata": {},
+   "source": [
+    "**Task:** Modify the above code to get the answer in `else:` statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7d46e19a-3469-4f77-95d6-4cfa57cc7263",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# datetime is a module and dt is how we are going to refer to it.\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c5c5590-4e10-4181-ae95-d61421559efc",
+   "metadata": {},
+   "source": [
+    "arithmentic operators\n",
+    "exercise 1\n",
+    "\n",
+    "fill in dictionary and check the answers with check_exercise()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d2540a0-9500-4d32-846d-5768eb662414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill operators in string\n",
+    "# careful with /\n",
+    "answer = {\n",
+    "    'multiplication': '',\n",
+    "    'addition': '',\n",
+    "    'subtraction': '',\n",
+    "    'division': '',\n",
+    "    'integer (floor) division': '',\n",
+    "    'modulus': '',\n",
+    "    'Exponentiation': '',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6602e56-c367-4722-a07e-087a114a0e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the answer here"
    ]
   },
   {
@@ -148,8 +241,6 @@
     }
    ],
    "source": [
-    "name = 'Noah'\n",
-    "\n",
     "# greet Noah\n",
     "print('Hello Noah')\n",
     "\n",
@@ -159,13 +250,13 @@
     "lunchTime = dt.time(12, 0, 0)\n",
     "night_time = dt.time(22, 0, 0)\n",
     "\n",
-    "# while loop to check time\n",
-    "\n",
     "if dt.datetime.now() == lunchTime:\n",
     "    print('Noah, go for lunch, otherwise your aptitude will drop!')\n",
     "\n",
     "if dt.datetime.now() == night_time:\n",
-    "    print('Noah, go for lunch, otherwise your aptitude will drop!')\n"
+    "    print('Noah, go for lunch, otherwise your aptitude will drop!')\n",
+    "\n",
+    "print('Program exit')"
    ]
   },
   {
@@ -185,8 +276,8 @@
    "metadata": {},
    "source": [
     "### To fix 1: Not everyone is called Noah.\n",
-    "* introduce variable name\n",
-    "* Use it in the print statement. Try intuitive way, even though I assure you it will fail\n",
+    "* introduce variable `name`\n",
+    "* Use it in the `print` statement. Try intuitive way, even though I assure you it will fail\n",
     "* search internet (use as precise keywords in the question).\n",
     "* Do the same in the GPT 3.5"
    ]
@@ -196,12 +287,13 @@
    "id": "0d9a1357-bb72-4025-959a-607bb0b6bb60",
    "metadata": {},
    "source": [
-    "### To fix 2: while loop to check current if current time "
+    "### To fix 2: while loop to check current if current time \n",
+    "* Our code ran once, so unless you run it exactly at midday or 10pm, the `if` statements will never evaluate `True`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "842eb9b5-d95a-4a2d-bf99-03187f1330cd",
    "metadata": {},
    "outputs": [],
@@ -209,6 +301,60 @@
     "# here we add the while and which will be almost infinite\n",
     "# show interupt/restart kernel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afe8f7e2-81b0-41ed-ac42-46f909e06001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# greet Noah\n",
+    "print('Hello Noah')\n",
+    "\n",
+    "# when lunch\n",
+    "import datetime as dt\n",
+    "\n",
+    "lunchTime = dt.time(12, 0, 0)\n",
+    "night_time = dt.time(22, 0, 0)\n",
+    "\n",
+    "while True:\n",
+    "    if dt.datetime.now() == lunchTime:\n",
+    "        print('Noah, go for lunch, otherwise your aptitude will drop!')\n",
+    "    \n",
+    "    if dt.datetime.now() == night_time:\n",
+    "        print('Noah, go for lunch, otherwise your aptitude will drop!')\n",
+    "        break\n",
+    "\n",
+    "print('Program exit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "695f828b-f197-4226-8a26-799a2118efe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Noah\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m lunchTime \u001b[38;5;241m=\u001b[39m dt\u001b[38;5;241m.\u001b[39mtime(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     10\u001b[0m night_time \u001b[38;5;241m=\u001b[39m dt\u001b[38;5;241m.\u001b[39mtime(\u001b[38;5;241m22\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m dt\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow() \u001b[38;5;241m==\u001b[39m lunchTime:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNoah, go for lunch, otherwise your aptitude will drop!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
