--- a/tutorials/D3S2_pandas/D3S2_tutorial1.ipynb
+++ b/tutorials/D3S2_pandas/D3S2_tutorial1.ipynb
@@ -3067,7 +3067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "Zh8Q3WyMZSCK",
    "metadata": {
     "id": "Zh8Q3WyMZSCK"
@@ -3084,7 +3084,7 @@
        " <BarContainer object of 20 artists>)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3111,7 +3111,7 @@
    ],
    "source": [
     "# place for your exploratory visualizations\n",
-    "# seaborn way to \n",
+    "# seaborn way for subplots.\n",
     "fig, ax = plt.subplots(1, 2, figsize=(8, 4))\n",
     "sns.histplot(titanic, x='age', hue='sex', ax=ax[0], multiple='dodge')\n",
     "sns.histplot(titanic, x='age', hue='adult_male', ax=ax[1])\n",
