add blackjack nb separately

--- a/tutorials/D2S1_ds_cond_oper/D2S1_tutorial1.ipynb
+++ b/tutorials/D2S1_ds_cond_oper/D2S1_tutorial1.ipynb
@@ -983,38 +983,9 @@
     "---\n",
     "# Section 9: Exercise 2, blackjack\n",
     "\n",
-    "*Time estimate: ~20 mins*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "873d6d59-764f-4978-85e0-0200965c06c3",
-   "metadata": {},
-   "source": [
-    "In this problem we'll be working with a simplified version of blackjack (aka twenty-one). In this version there is one player (who you'll control) and a dealer. Play proceeds as follows:\n",
+    "*Time estimate: ~20 mins*\n",
     "\n",
-    "The player is dealt two face-up cards. The dealer is dealt one face-up card.\n",
-    "The player may ask to be dealt another card ('hit') as many times as they wish. If the sum of their cards exceeds 21, they lose the round immediately.\n",
-    "\n",
-    "The dealer then deals additional cards to himself until either:\n",
-    "\n",
-    "1. the sum of the dealer's cards exceeds 21, in which case the player wins the round\n",
-    "\n",
-    "2. the sum of the dealer's cards is greater than or equal to 17. If the player's total is greater than the dealer's, the player wins. Otherwise, the dealer wins (even in case of a tie).\n",
-    "\n",
-    "When calculating the sum of cards, Jack, Queen, and King count for 10. Aces can count as 1 or 11 (when referring to a player's \"total\" above, we mean the largest total that can be made without exceeding 21. So e.g. A+8 = 19, A+8+8 = 17)\n",
-    "\n",
-    "For this problem, you'll write a function representing the player's decision-making strategy in this game. We've provided a very unintelligent implementation below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0a36a38-2be4-4594-8e88-9598ebd791c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: put starting point\n"
+    "* Please refer to the separate notebook which is located in `2024-intro-course/Blackjak_simulator_challenge.ipynb`"
    ]
   },
   {
